# src/controllers/User/user.controller.ts
@@ -6,6 +6,7 @@ import { showResponse } from '../../utils/response.util';
 import statusCodes from '../../constants/statusCodes'
 import { tryCatchWrapper } from '../../utils/config.util';
 import { validateAddUpdateAllergy, validateAddUpdateContacts, validateAddUpdateMedications, validateDeleteUserInfo, validateUpdateSetting, validateUserInfoDetails, validateUserInfoList } from '../../validations/User/user.validator';
+import { validateAddContactUs } from '../../validations/Admin/admin.contactus.validator';
 @Tags('User Routes')
 @Route('/user')
 
@@ -72,59 +73,6 @@ export default class UserController extends Controller {
     }
     //ends
 
-    //     /**
-    // * Add User Allergy
-    // */
-    //     @Security('Bearer')
-    //     @Post("/allergy/add")
-    //     public async addAllergy(@Body() request: { name: string }): Promise<ApiResponse> {
-
-    //         const validate = validateAddAllergy(request);
-    //         if (validate.error) {
-    //             return showResponse(false, validate.error.message, null, statusCodes.VALIDATION_ERROR)
-    //         }
-
-    //         const wrappedFunc = tryCatchWrapper(handler.addAllergy);
-    //         return wrappedFunc(request, this.userId); // Invoking the wrapped function 
-    //     }
-    //     //ends
-
-    //     /**
-    //     * Add User Medication
-    //     */
-    //     @Security('Bearer')
-    //     @Post("/medication/add")
-    //     public async addMedication(@Body() request: { name: string, dose: string, reason: string }): Promise<ApiResponse> {
-
-    //         const validate = validateAddMedication(request);
-    //         if (validate.error) {
-    //             return showResponse(false, validate.error.message, null, statusCodes.VALIDATION_ERROR)
-    //         }
-
-    //         const wrappedFunc = tryCatchWrapper(handler.addMedication);
-    //         return wrappedFunc(request, this.userId); // Invoking the wrapped function 
-    //     }
-    //     //ends
-
-
-    //     /**
-    //     * Add User Emergency Contact
-    //     */
-    //     @Security('Bearer')
-    //     @Post("/contact/add")
-    //     public async addEmergencyContact(@Body() request: { name: string, phone: string, email: string }): Promise<ApiResponse> {
-
-    //         const validate = validateAddEmergencyContact(request);
-    //         if (validate.error) {
-    //             return showResponse(false, validate.error.message, null, statusCodes.VALIDATION_ERROR)
-    //         }
-
-    //         const wrappedFunc = tryCatchWrapper(handler.addEmergencyContact);
-    //         return wrappedFunc(request, this.userId); // Invoking the wrapped function 
-    //     }
-    //     //ends
-
-
     /**
    * List User Info Medics And other
    * type == 'allergy', 'medication', 'contacts'
@@ -176,58 +124,6 @@ export default class UserController extends Controller {
         return wrappedFunc(this.userId); // Invoking the wrapped function 
     }
     //ends
-
-    //     /**
-    // * Update User Allergy
-    // */
-    //     @Security('Bearer')
-    //     @Put("/allergy/update")
-    //     public async updateAllergy(@Body() request: { allergy_id: string, name: string }): Promise<ApiResponse> {
-
-    //         const validate = validateUpdateAllergy(request);
-    //         if (validate.error) {
-    //             return showResponse(false, validate.error.message, null, statusCodes.VALIDATION_ERROR)
-    //         }
-
-    //         const wrappedFunc = tryCatchWrapper(handler.updateAllergy);
-    //         return wrappedFunc(request, this.userId); // Invoking the wrapped function 
-    //     }
-    //     //ends
-
-    //     /**
-    //     * Update User Medication
-    //     */
-    //     @Security('Bearer')
-    //     @Put("/medication/update")
-    //     public async updateMedication(@Body() request: { medication_id: string, name: string, dose: string, reason: string }): Promise<ApiResponse> {
-
-    //         const validate = validateUpdateMedication(request);
-    //         if (validate.error) {
-    //             return showResponse(false, validate.error.message, null, statusCodes.VALIDATION_ERROR)
-    //         }
-
-    //         const wrappedFunc = tryCatchWrapper(handler.updateMedication);
-    //         return wrappedFunc(request, this.userId); // Invoking the wrapped function 
-    //     }
-    //     //ends
-
-
-    //     /**
-    //     * Update User Emergency Contact
-    //     */
-    //     @Security('Bearer')
-    //     @Put("/contact/update")
-    //     public async updateEmergencyContact(@Body() request: { contact_id: string, name: string, phone: string, email: string }): Promise<ApiResponse> {
-
-    //         const validate = validateUpdateEmergencyContact(request);
-    //         if (validate.error) {
-    //             return showResponse(false, validate.error.message, null, statusCodes.VALIDATION_ERROR)
-    //         }
-
-    //         const wrappedFunc = tryCatchWrapper(handler.updateEmergencyContact);
-    //         return wrappedFunc(request, this.userId); // Invoking the wrapped function 
-    //     }
-    //     //ends
 
 
     /**
@@ -285,6 +181,21 @@ export default class UserController extends Controller {
         return wrappedFunc(request); // Invoking the wrapped function 
     }
     //ends
+
+    /**
+   * Contact Us
+   */
+    @Post("/contactus/fill")
+    public async contactUs(@Body() request: { name: string, email: string, message?: string }): Promise<ApiResponse> {
+
+        const validate = validateAddContactUs(request);
+        if (validate.error) {
+            return showResponse(false, validate.error.message, null, statusCodes.VALIDATION_ERROR)
+        }
+
+        const wrappedFunc = tryCatchWrapper(handler.contactUs);
+        return wrappedFunc(request); // Invoking the wrapped function 
+    }
 
 }
 
